--- a/seleccion-de-la-vida/updated/01-vida-thomas-ellwood.adoc
+++ b/seleccion-de-la-vida/updated/01-vida-thomas-ellwood.adoc
@@ -605,7 +605,7 @@ También se me requirió que dejara la costumbre de
 dirigirme a los hombres con títulos aduladores.
 Ese era un mal al que había sido muy adicto y era considerado un completo artista en ello.
 Así que a partir de ese momento,
-no me atreví a decir "`sir,`" "`maestro,`" "`mi señor`" o "`señora`" a ninguna persona,
+no me atreví a decir "`caballero,`" "`maestro,`" "`mi señor`" o "`señora`" a ninguna persona,
 ni a decir "`vuestro humilde servidor`" a ninguno
 con el que no tuviera una relación real de siervo;
 algo que nunca había sido de ningún hombre.
@@ -1351,7 +1351,7 @@ porque la siguiente vez que mi padre lo vio sobre mi cabeza,
 me lo arrancó violentamente y lo puso con el otro, y yo no tenía idea dónde.
 Por ende, me puse mi gorro de invierno,
 que era todo lo que me quedaba para usar sobre mi cabeza.
-Pero la conservé por muy poco tiempo,
+Pero lo conservé por muy poco tiempo,
 porque tan pronto como mi padre fue a donde yo estaba,
 lo perdí también. Ahora estaba obligado a ir con la cabeza
 descubierta adondequiera que tuviera que ir,
